@@ -49,7 +49,7 @@ $g = [
 	'www_path' => '/usr/local/www',
 	'xml_rootobj' => 'nas4free',
 	'debug' => false,
-	'latest_config' => '3.2',
+	'latest_config' => '3.3',
 	'wireless_regex' => '/^(ndis|wlan|an|ath|bwi|bwn|ipw|iwi|iwn|malo|mwl|ral|wi|wpi|rsu|rum|run|uath|upgt|ural|urtw|urtwn|usie|zyd)/',
 	'default_passwd' => 'nas4free',
 	'default_ip' => '192.168.1.250'
