@@ -49,6 +49,7 @@ Fixes:
 - Fix suppress message being displayed twice.
 - Fix single and double quotes in user passwords.
 - Fix hide ntp parameter when ntp is not used.
+- Fix issue with vfs.zfs.min_auto_ashift.
 
 Permanent restrictions:
 - No more x86 versions of NAS4Free 11 series will be made, 32-bits users need 10.3 than.
